fix sliders overlapping footer

--- a/enershelf/static/sass/layouts/_panel.scss
+++ b/enershelf/static/sass/layouts/_panel.scss
@@ -67,6 +67,7 @@
   @extend .position-sticky;
   @extend .bottom-0;
   @extend .w-auto;
+  z-index: 9;
 
   &__btns {
     @extend .d-flex;
